# rust_fm_plugin

./: .gitignore  Cargo.toml  LICENSE  README.md  bindings-linux.rs  bindings_win.rs  build.rs  config.rs  config_template.toml  post_build.py  post_build.rs
.github/workflows/: rust.yml
bindgen/: bindings_mac.rs
headers/: FMWrapper.h  FMXBinaryData.h  FMXCalcEngine.h  FMXClient.h  FMXData.h  FMXDateTime.h  FMXExtern.h  FMXFixPt.h  FMXText.h  FMXTextStyle.h  FMXTypes.h
libraries/Mac/FMWrapper.framework/: FMWrapper
libraries/Mac/FMWrapper.framework/Versions/A/: FMWrapper
libraries/Mac/FMWrapper.framework/Versions/A/Resources/: Info.plist
libraries/Win/x64/: FMWrapper.lib
libraries/iphoneos/: FMWrapper.framework
libraries/iphoneos/iOSAppSDK.framework/: Info.plist  iOSAppSDK
libraries/iphonesimulator/: FMWrapper.framework
libraries/iphonesimulator/iOSAppSDK.framework/: Info.plist  iOSAppSDK
src/: config.rs  ffi.rs  functions.rs  helpers.rs  lib.rs  plugin.rs  post_build.rs  wrappers.rs
src/ffi/: binary_data.rs  calc_engine.rs  client.rs  data.rs  datetime.rs  external.rs  fixed_point.rs  text.rs  text_style.rs  types.rs
src/functions/: convert_to_base.rs  execute_sql.rs  execute_sql_text_result.rs  insert_file.rs  pdf_to_json.rs
tests/: Cargo.toml  integration_test.rs  test_plugin.fmp12
tests/src/: lib.rs
tests/test_plugin/: Cargo.toml  post_build.rs
tests/test_plugin/src/: lib.rs
