[package]
name = "fm_plugin"
version = "0.1.0"
authors = ["mutantcows <mutantcows@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
widestring = "0.4"
directories = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
