[package]
name = "fm_plugin"
version = "0.1.12"
authors = ["mutantcows <mutantcows@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Build plug-ins for use with FileMaker Pro and FileMaker Server."
keywords = ["filemaker", "plugin", "filemaker-sdk", "sdk"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/mutantcows/rust_fm_plugin/"

[lib]
path = "src/lib.rs"

[dependencies]
widestring = "^0.4"
serde = { version = "^1.0.118", features = ["derive"] }
toml = "^0.5"
lazy_static = "^1.4"
